--- a/index1.html
+++ b/index1.html
@@ -514,7 +514,7 @@
 
 						<!-- Logo -->
 
-						<a class="logo pull-left" href="my_index.php">
+						<a class="logo pull-left" href="index.php">
 
 							<img src="assets/images/logo_dark.png" alt="" />
 
