add navigation in index html

--- a/index.html
+++ b/index.html
@@ -112,165 +112,165 @@
 -->
 
 <body class="smoothscroll enable-animation">
-fdfd
-<!--<div id="wrapper">-->
 
-<!--    <div id="header" class="sticky shadow-after-3 clearfix">-->
-<!--        &lt;!&ndash; TOP NAV &ndash;&gt;-->
-<!--        <header id="topNav">-->
-<!--            &lt;!&ndash;        <div class="container">&ndash;&gt;-->
-<!--            &lt;!&ndash; Mobile Menu Button &ndash;&gt;-->
-<!--            <button class="btn btn-mobile" data-toggle="collapse" data-target=".nav-main-collapse">-->
-<!--                <i class="fa fa-bars"></i>-->
-<!--            </button>-->
-<!--            &lt;!&ndash; Logo &ndash;&gt;-->
+<div id="wrapper">
 
-<!--            &lt;!&ndash;Fb and tel&ndash;&gt;-->
-<!--            <ul class="pull-right nav nav-pills nav-second-main">-->
-<!--                &lt;!&ndash; Facebook link &ndash;&gt;-->
-<!--                <li class="search">-->
-<!--                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</a>-->
-<!--                </li>-->
-<!--                &lt;!&ndash; /Facebook link &ndash;&gt;-->
+    <div id="header" class="sticky shadow-after-3 clearfix">
+        <!-- TOP NAV -->
+        <header id="topNav">
+            <!--        <div class="container">-->
+            <!-- Mobile Menu Button -->
+            <button class="btn btn-mobile" data-toggle="collapse" data-target=".nav-main-collapse">
+                <i class="fa fa-bars"></i>
+            </button>
+            <!-- Logo -->
 
-<!--                &lt;!&ndash; Phone number &ndash;&gt;-->
-<!--                <li class="search">-->
-<!--                    <a href="tel:380660751312"><i class="fa fa-phone" aria-hidden="true"></i>380660751312</a>-->
-<!--                </li>-->
-<!--                &lt;!&ndash; /Phone number link &ndash;&gt;-->
+            <!--Fb and tel-->
+            <ul class="pull-right nav nav-pills nav-second-main">
+                <!-- Facebook link -->
+                <li class="search">
+                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</a>
+                </li>
+                <!-- /Facebook link -->
 
-<!--                &lt;!&ndash; Phone number2 &ndash;&gt;-->
-<!--                <li class="search">-->
-<!--                    <a href="tel:380660751312"><i class="fa fa-phone" aria-hidden="true"></i>380660751312</a>-->
-<!--                </li>-->
-<!--                &lt;!&ndash; /Phone number2 link &ndash;&gt;-->
+                <!-- Phone number -->
+                <li class="search">
+                    <a href="tel:380660751312"><i class="fa fa-phone" aria-hidden="true"></i>380660751312</a>
+                </li>
+                <!-- /Phone number link -->
 
-
-<!--            </ul>-->
-<!--            &lt;!&ndash;fb and tel&ndash;&gt;-->
-
-<!--            <a class="logo pull-left" href="index.php">-->
-<!--                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-<!--                &lt;!&ndash;                <a href="index.php" class="inline-block"><h1>Vodogray</h1></a>&ndash;&gt;-->
-<!--                <img src="assets/imgs/logo.png" alt="" />-->
-
-<!--            </a>-->
-
-<!--            &lt;!&ndash;-->
-
-<!--                Top Nav-->
+                <!-- Phone number2 -->
+                <li class="search">
+                    <a href="tel:380660751312"><i class="fa fa-phone" aria-hidden="true"></i>380660751312</a>
+                </li>
+                <!-- /Phone number2 link -->
 
 
+            </ul>
+            <!--fb and tel-->
 
-<!--                AVAILABLE CLASSES:-->
+            <a class="logo pull-left" href="index.php">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <!--                <a href="index.php" class="inline-block"><h1>Vodogray</h1></a>-->
+                <img src="assets/imgs/logo.png" alt="" />
 
-<!--                submenu-dark = dark sub menu-->
+            </a>
 
-<!--            &ndash;&gt;-->
+            <!--
 
-<!--            <div class="navbar-collapse pull-right nav-main-collapse collapse submenu-dark">-->
-
-<!--                <nav class="nav-main">-->
+                Top Nav
 
 
 
-<!--                    &lt;!&ndash;-->
+                AVAILABLE CLASSES:
 
-<!--                        NOTE-->
+                submenu-dark = dark sub menu
 
+            -->
 
+            <div class="navbar-collapse pull-right nav-main-collapse collapse submenu-dark">
 
-<!--                        For a regular link, remove "dropdown" class from LI tag and "dropdown-toggle" class from the href.-->
-
-<!--                        Direct Link Example:-->
-
-
-
-<!--                        <li>-->
-
-<!--                            <a href="#">HOME</a>-->
-
-<!--                        </li>-->
-
-<!--                    &ndash;&gt;-->
-
-<!--                    <ul id="topMain" class="nav nav-pills nav-main">-->
-
-<!--                        <li>&lt;!&ndash; Головна &ndash;&gt;-->
-
-<!--                            <a href="index.php">-->
-
-<!--                                Головна-->
-
-<!--                            </a>-->
-
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Дозвілля &ndash;&gt;-->
-
-<!--                            <a href="my_leisure.php">-->
-
-<!--                                Дозвілля-->
-
-<!--                            </a>-->
-
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Інфраструктура &ndash;&gt;-->
-
-<!--                            <a href="my_infrastructure.php">-->
-
-<!--                                Інфраструктура-->
-
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Умови перебування &ndash;&gt;-->
-
-<!--                            <a href="1my_sanitation.php">-->
-<!--                                Умови перебування-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Галерея &ndash;&gt;-->
-<!--                            <a href="1my_gallery.php">-->
-<!--                                Галерея-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Новини &ndash;&gt;-->
-<!--                            <a href="1my_news.php">-->
-<!--                                Новини-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Праивла та умови &ndash;&gt;-->
-<!--                            <a href="1my_conditions.php">-->
-<!--                                Правила та умови-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li>&lt;!&ndash; Пропозиції &ndash;&gt;-->
-<!--                            <a href="1my_offers.php">-->
-<!--                                Пропозиції-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                    </ul>-->
-
-<!--                </nav>-->
-
-<!--            </div>-->
-
-<!--            &lt;!&ndash;        </div>&ndash;&gt;-->
-
-<!--        </header>-->
-
-<!--        &lt;!&ndash; /Top Nav &ndash;&gt;-->
+                <nav class="nav-main">
 
 
 
-<!--    </div>-->
+                    <!--
+
+                        NOTE
+
+
+
+                        For a regular link, remove "dropdown" class from LI tag and "dropdown-toggle" class from the href.
+
+                        Direct Link Example:
+
+
+
+                        <li>
+
+                            <a href="#">HOME</a>
+
+                        </li>
+
+                    -->
+
+                    <ul id="topMain" class="nav nav-pills nav-main">
+
+                        <li><!-- Головна -->
+
+                            <a href="index.php">
+
+                                Головна
+
+                            </a>
+
+                        </li>
+
+                        <li><!-- Дозвілля -->
+
+                            <a href="my_leisure.php">
+
+                                Дозвілля
+
+                            </a>
+
+                        </li>
+
+                        <li><!-- Інфраструктура -->
+
+                            <a href="my_infrastructure.php">
+
+                                Інфраструктура
+
+                            </a>
+                        </li>
+
+                        <li><!-- Умови перебування -->
+
+                            <a href="1my_sanitation.php">
+                                Умови перебування
+                            </a>
+                        </li>
+
+                        <li><!-- Галерея -->
+                            <a href="1my_gallery.php">
+                                Галерея
+                            </a>
+                        </li>
+
+                        <li><!-- Новини -->
+                            <a href="1my_news.php">
+                                Новини
+                            </a>
+                        </li>
+
+                        <li><!-- Праивла та умови -->
+                            <a href="1my_conditions.php">
+                                Правила та умови
+                            </a>
+                        </li>
+
+                        <li><!-- Пропозиції -->
+                            <a href="1my_offers.php">
+                                Пропозиції
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </nav>
+
+            </div>
+
+            <!--        </div>-->
+
+        </header>
+
+        <!-- /Top Nav -->
+
+
+
+    </div>
 <!--    &lt;!&ndash; REVOLUTION SLIDER &ndash;&gt;-->
 
 <!--    <div class="slider fullwidthbanner-container roundedcorners">-->
