comment phone number 2 in index html

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                 </li>
                 <!-- /Phone number link -->
 
-                <!-- Phone number2 -->
-                <li class="search">
-                    <a href="tel:380660751312"><i class="fa fa-phone" aria-hidden="true"></i>380660751312</a>
-                </li>
-                <!-- /Phone number2 link -->
+<!--                &lt;!&ndash; Phone number2 &ndash;&gt;-->
+<!--                <li class="search">-->
+<!--                    <a href="tel:380660751312"><i class="fa fa-phone" aria-hidden="true"></i>380660751312</a>-->
+<!--                </li>-->
+<!--                &lt;!&ndash; /Phone number2 link &ndash;&gt;-->
 
 
             </ul>
